Updated README.md file and done some cleanup

--- a/logDisplayWebApp/templates/index.html
+++ b/logDisplayWebApp/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <center>
-        <h1>Summary of Executions</h1>
+        <h1>LOG Display Web Application</h1>
         <table class="data-table">
         <thead>
             <tr>
