--- a/logDisplayWebApp/templates/iterAndDutLogs.html
+++ b/logDisplayWebApp/templates/iterAndDutLogs.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='tableStyles.css') }}">
     <script src="{{ url_for('static', path='displayLogs.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
     <title>Data Table with FastAPI and Jinja2</title>
 </head>
 
@@ -15,7 +18,14 @@
     <center>
         <h1>Summary of Executions</h1>
         <table class="summary-table">
-               <caption>Summary Table</caption>
+            <thead>
+               <tr>
+                   <th id="title" scope="col" colspan="2">
+                       Summary Table
+                   </th>
+
+               </tr>
+            </thead>
             <tbody>
             <tr>
                 <td>Total Executions</td>
@@ -39,7 +49,32 @@
             </tr>
             </tbody>
         </table>
-        <table class="data-table">
+        <br>
+    <div class="btn-group">
+    <button type="button" class="btn btn-secondary">Table Rows</button>
+      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="visually-hidden">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu" onchange="location = this.value;">
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=10&filters={{ current_filter }}&dir_path={{dir_path}}">10</a></li>
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=20&filters={{ current_filter }}&dir_path={{dir_path}}">20</a></li>
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=50&filters={{ current_filter }}&dir_path={{dir_path}}">50</a></li>
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=100&filters={{ current_filter }}&dir_path={{dir_path}}">100</a></li>
+      </ul>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-secondary">Filter By</button>
+      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="visually-hidden">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu" onchange="location = this.value;">
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size={{ current_page_size }}&filters=all&dir_path={{dir_path}}">All</a></li>
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size={{ current_page_size }}&filters=pass&dir_path={{dir_path}}">Pass</a></li>
+        <li><a class="dropdown-item" href="?page={{current_page}}&page_size={{ current_page_size }}&filters=fail&dir_path={{dir_path}}">Fail</a></li>
+      </ul>
+</div>
+
+    <table class="data-table">
         <thead>
             <tr>
                 <th>Iteration Number</th>
@@ -54,45 +89,39 @@
                     <td>{{ row.dir_name }}</td>
                     <td>{{ row.iteration_result }}</td>
                     <td>{{ row.dir_last_modified }}</td>
-                    <td><button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','iter')">Iteration Logs</button>,
-                        <button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','dut')">DUT Logs</button>
+                    <td><button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','iter')" class="btn btn-primary">Iteration Logs</button>
+                        <button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','dut')" class="btn btn-secondary">DUT Logs</button>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-
-    <!-- Pagination -->
-    <div class="pagination">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
         {% if current_page > 1 %}
-            <a href="?page=1&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">First</a>
-            <a href="?page={{ current_page - 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Previous</a>
+            <li class="page-item">
+                <a class="page-link"  href="?page=1&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">First</a>
+            </li>
+          <li class="page-item">
+              <a class="page-link"  href="?page={{ current_page - 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Previous</a>
+          </li>
         {% endif %}
 
         {% for page_num in range(1, total_pages + 1) %}
-            <a href="?page={{ page_num }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}" {% if page_num == current_page %}class="active"{% endif %}>{{ page_num }}</a>
+          <li class="page-item">
+              <a class="page-link" href="?page={{ page_num }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}" {% if page_num == current_page %}class="active"{% endif %}>{{ page_num }}</a>
+          </li>
         {% endfor %}
 
         {% if current_page < total_pages %}
-            <a href="?page={{ current_page + 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Next</a>
-            <a href="?page={{ total_pages }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Last</a>
+          <li class="page-item"><a class="page-link" href="?page={{ current_page + 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Next</a></li>
+          <li class="page-item"><a class="page-link" href="?page={{ total_pages }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Last</a></li>
         {% endif %}
-    </div>
-    <label for="rows">Rows per page:</label>
-    <select id="rows" name="rows" onchange="location = this.value;">
-        <option value="?page={{current_page}}&page_size=10&filters={{ current_filter }}&dir_path={{dir_path}}">10</option>
-        <option value="?page={{current_page}}&page_size=20&filters={{ current_filter }}&dir_path={{dir_path}}">20</option>
-        <option value="?page={{current_page}}&page_size=50&filters={{ current_filter }}&dir_path={{dir_path}}">50</option>
-        <option value="?page={{current_page}}&page_size=100&filters={{ current_filter }}&dir_path={{dir_path}}">100</option>
-    </select>
 
-    <!-- Age filter dropdown -->
-    <label for="filter">Filter by Pass/Fail/All:</label>
-    <select id="filter" name="filter" onchange="location = this.value;">
-        <option value="?page={{current_page}}&page_size={{ current_page_size }}&filters=all&dir_path={{dir_path}}" {% if current_filter == 'all' %}selected{% endif %}>All</option>
-        <option value="?page={{current_page}}&page_size={{ current_page_size }}&filters=pass&dir_path={{dir_path}}" {% if current_filter == 'pass' %}selected{% endif %}>Pass</option>
-        <option value="?page={{current_page}}&page_size={{ current_page_size }}&filters=fail&dir_path={{dir_path}}" {% if current_filter == 'fail' %}selected{% endif %}>Fail</option>
-    </select>
+      </ul>
+    </nav>
+     <!-- Example split danger button -->
+
     </center>
 
 </body>
