--- a/logDisplayWebApp/static/tableStyles.css
+++ b/logDisplayWebApp/static/tableStyles.css
@@ -1,15 +1,14 @@
 /* styles.css */
 
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 20px;
-}
-
 h1 {
+    text-align: center;
+    margin: 0 auto;
+    display: block;
     color: #333;
 }
 
 table.data-table {
+
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
@@ -33,11 +32,24 @@ table.summary-table td {
     padding: 8px;
     text-align: left;
 }
-caption{
-    text-align: center;
-    font-weight: bold;
-    border: 1px solid;
+#title{
     background-color: #f2f2f2;
-    }
+    text-align: center;
+    border: 1px solid #dee2e6;
+}
+.pagination .page-link {
+            background-color: #3396ff; /* Bootstrap blue color */
+            border-color: #3396ff;
+            color: #fff; /* White text color */
+        }
 
-
+.pagination .page-link:hover {
+            background-color: #0056b3; /* Slightly darker blue on hover */
+            border-color: #0056b3;
+            color: #fff; /* White text color on hover */
+        }
+.pagination {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center; /* Center the items horizontally */
+        }
