--- a/logDisplayWebApp/templates/LogSelect.html
+++ b/logDisplayWebApp/templates/LogSelect.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='tableStyles.css') }}">
-        <script>
+            <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
+    <script>
             function fileFetch(dir_path,dir_name){
                 window.open("/get_log_contents?file_path="+dir_path+"&file_name="+dir_name)
             }
         </script>
 </head>
 <body>
-<h1>Multiple Log file are found choose which to display</h1>
+<h1 style="">Multiple Log file are found choose which to display</h1>
 <table class="data-table">
         <thead>
             <tr>
@@ -22,7 +23,7 @@
         <tbody>
             {% for row in files %}
                 <tr>
-                    <td><button onclick="fileFetch( '{{ row.file_path }}', '{{ row.file_name }}')">{{ row.file_name }}</button></td>
+                    <td><button class="btn btn-primary" onclick="fileFetch( '{{ row.file_path }}', '{{ row.file_name }}')">{{ row.file_name }}</button></td>
                     <td>{{ row.file_size }}</td>
                     <td>{{ row.file_last_modified }}</td>
 
