Made changes to UI. 1.)capture pairing duration and display in web app 2.)capture on python side why the pairing did not happen and display that as well in app 3.)plot the pairing duration in line graph using d3js library. 4.)Added a new feature to execute scripts via web app. The UI will take arguments from user and pass it to the scripts.

--- a/logDisplayWebApp/static/tableStyles.css
+++ b/logDisplayWebApp/static/tableStyles.css
@@ -32,6 +32,18 @@ table.summary-table td {
     padding: 8px;
     text-align: left;
 }
+.script_table{
+    width: 40%;
+    border-collapse: collapse;
+    margin: auto;
+    margin-top: 20px;
+}
+.script_table td, .script_table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+
+}
 #title{
     background-color: #f2f2f2;
     text-align: center;
