--- a/logDisplayWebApp/templates/index.html
+++ b/logDisplayWebApp/templates/index.html
@@ -9,6 +9,7 @@
     <title>DUT Logs WebApp</title>
 </head>
 <body>
+    {% include "navigation_bar.html" %}
     <center>
         <h1>Matter Chip Test execution log viewer</h1>
         <table class="data-table">
