--- a/logDisplayWebApp/templates/test_cases_index.html
+++ b/logDisplayWebApp/templates/test_cases_index.html
@@ -25,7 +25,7 @@
             {% for dirs in dir_list %}
                 <tr>
                     <td>
-                        <form action="/home/test_cases_index" method="get">
+                        <form action="/home/displayLogFolder" method="get">
                         <input type="hidden" value={{ dirs.dir_path }} name="dir_path">
                         <button class="btn btn-primary" type="submit">{{dirs.dir_name}}</button>
                         </form>
@@ -36,7 +36,7 @@
                         <button class="btn btn-success" onclick="fileFetch('{{log_dir}}','{{dirs.dir_name}}','zip')"> Download </button>
                         <button class="btn btn-danger" onclick="fileFetch('{{log_dir}}','{{dirs.dir_name}}','delete')"> Delete </button>
                     </td>
-                     
+
                 </tr>
             {% endfor %}
         </tbody>
