N number of graphs can will be rendered for N number of parameters, zoom functionalities are not working efficiently for now

--- a/logDisplayWebApp/templates/iterAndDutLogs.html
+++ b/logDisplayWebApp/templates/iterAndDutLogs.html
@@ -73,7 +73,7 @@
       </ul>
 </div>
 <div class="btn-group">
-    <button type="button" class="btn btn-secondary" onclick="lineChart('{{dir_path}}')"> Pairing Duration Graph</button>
+    <button type="button" class="btn btn-secondary" onclick="lineChart('{{dir_path}}')"> Analytics Graph</button>
 </div>
     <table class="data-table">
         <thead>
