--- a/logDisplayWebApp/templates/lineChart.html
+++ b/logDisplayWebApp/templates/lineChart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <script src="{{url_for('static',path='d3_js/d3.v7.min.js')}}"></script>
 
@@ -8,26 +8,85 @@
     <script src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='linechart.css') }}">
     <script defer id="data" type="application/json">{{summary_json | tojson}}</script>
+  <style>
+    /* Styling for the container */
+    .main_container {
+      width: 100%;
+      text-align: center;
+    }
 
+    /* Styling for each div */
+    .box1 {
+      display: inline-block; /* or use 'float: left;' */
+      width: 80%; /* Adjust the width as needed */
+      margin: 10px;
+      box-sizing: border-box;
+    }
+    .box2 {
+      display: inline-block; /* or use 'float: left;' */
+      /* width: 10%; Adjust the width as needed */
+      margin: 10px;
+      box-sizing: border-box;
+      height: 100%;
+    }
 
+    /* Styling for labels */
+    label {
+      display: block; 
+      margin-bottom: 5px;
+    }
+    #div1 {
+      display: inline-block;
+      vertical-align: top; /* Align to the top */
+      margin-right: 20px; /* Add some spacing between the divs */
+    }
+
+    /* Style for the second div with ten labels */
+    #div2 {
+      display: inline-block;
+      vertical-align: top; /* Align to the top */
+      position: fixed;
+    }
+    input{
+    box-sizing: border-box;
+    width: 15%;
+}
+  </style>
 </head>
 <body>
+
+<div  class="main_container">
+    <div id="div2" class="box2">
+        
+        <button type="button" class="btn btn-primary" onclick="zoom_refactor()">Zoom Refactor</button> <input type="number"  id="zoom-refactor">
+        <br>
+        <br>
+        <button class="btn btn-primary" onclick="increaseWidth()">Increase Width By</button><input type="number" id="incr-width">
+        <br>
+        <br>
+        <button class="btn btn-primary" onclick="decreaseWidth()">Decrease Width BY</button><input type="number" id="decr-width">
+        <br>
+        <br>
+        <button class="btn btn-primary" onclick="increaseHeight()">Increase Height By</button><input type="number" id="incr-height">
+        <br>
+        <br>
+        <button class="btn btn-primary" onclick="decreaseHeight()">Decrease Height By</button><input type="number" id="decr-height">
+        <br>
+        <br>
+        <select id="analytics_options">
+            {% for analytic in summary_json["analytics"] %}
+            <option value="{{analytic}}">{{analytic.upper()}}</option>
+            {% endfor %}
+        </select>
+      </div>
+  <!-- First div -->
+  <div id="div1" class="box1">
     <div class="graph_container">
         <div id="container">
         <p id="zoomLevel">Zoom Level: 1</p>
         </div>
     </div>
-    <div id="zoom-div" class="btn-group">
-        <button type="button" class="btn btn-primary" onclick="zoom_refactor()">Zoom Refactor</button> <input type="number"  id="zoom-refactor">
-    </div>
-    <div id="width-div" class="">
-        <button class="btn btn-primary" onclick="increaseWidth()">Increase Width By</button><input type="number" id="incr-width">
-        <button class="btn btn-primary" onclick="decreaseWidth()">Decrease Width BY</button><input type="number" id="decr-width">
-    </div>
-    <div id="height">
-        <button class="btn btn-primary" onclick="increaseHeight()">Increase Height By</button><input type="number" id="incr-height">
-        <button class="btn btn-primary" onclick="decreaseHeight()">Decrease Height By</button><input type="number" id="decr-height">
-    </div>
-
+  </div>
+</div>
 </body>
 </html>
