--- a/logDisplayWebApp/templates/lineChart.html
+++ b/logDisplayWebApp/templates/lineChart.html
@@ -5,52 +5,12 @@
 
     <script defer type="text/javascript" src="{{ url_for('static', path='lineChartScript.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
-    <script src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script defer src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='linechart.css') }}">
     <script defer id="data" type="application/json">{{summary_json | tojson}}</script>
   <style>
     /* Styling for the container */
-    .main_container {
-      width: 100%;
-      text-align: center;
-    }
-
-    /* Styling for each div */
-    .box1 {
-      display: inline-block; /* or use 'float: left;' */
-      width: 80%; /* Adjust the width as needed */
-      margin: 10px;
-      box-sizing: border-box;
-    }
-    .box2 {
-      display: inline-block; /* or use 'float: left;' */
-      /* width: 10%; Adjust the width as needed */
-      margin: 10px;
-      box-sizing: border-box;
-      height: 100%;
-    }
-
-    /* Styling for labels */
-    label {
-      display: block; 
-      margin-bottom: 5px;
-    }
-    #div1 {
-      display: inline-block;
-      vertical-align: top; /* Align to the top */
-      margin-right: 20px; /* Add some spacing between the divs */
-    }
-
-    /* Style for the second div with ten labels */
-    #div2 {
-      display: inline-block;
-      vertical-align: top; /* Align to the top */
-      position: fixed;
-    }
-    input{
-    box-sizing: border-box;
-    width: 15%;
-}
+  
   </style>
 </head>
 <body>
@@ -73,7 +33,7 @@
         <button class="btn btn-primary" onclick="decreaseHeight()">Decrease Height By</button><input type="number" id="decr-height">
         <br>
         <br>
-        <select id="analytics_options">
+        <select id="analytics_options" class="form-select">
             {% for analytic in summary_json["analytics"] %}
             <option value="{{analytic}}">{{analytic.upper()}}</option>
             {% endfor %}
