--- a/logDisplayWebApp/templates/navigation_bar.html
+++ b/logDisplayWebApp/templates/navigation_bar.html
@@ -7,7 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/scriptExecution">Script Execution</a>
+<!--          <a class="nav-link active" aria-current="page" href="/scriptExecution">Script Execution</a>-->
+          <a class="nav-link active" aria-current="page" href="/compareScriptAnalytics">Compare Script analytics</a>
         </li>
       </ul>
     </div>
