--- a/logDisplayWebApp/templates/compareScriptAnalytics.html
+++ b/logDisplayWebApp/templates/compareScriptAnalytics.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Compare Script Analytics</title>
+    <script defer id="data" type="application/json">{{test_case_details | tojson}}</script>
     <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
     <script src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', path='jquery-3.7.1.min.js') }}"></script>
-    <script src="{{ url_for('static', path='compareGraphs.js') }}"></script>
+    <script defer src="{{ url_for('static', path='compareGraphs.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='linechart.css') }}">
     <script src="{{url_for('static',path='d3_js/d3.v7.min.js')}}"></script>
+    <script src="{{url_for('static',path='tree.min.js')}}"></script>
     <style>
-
         .center_div {
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              width: auto;
+            display: block;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+            height: 300px;
+            overflow: auto;
+            border: 1px solid #ccc;
+            margin: auto;
+            padding: 10px;
+            margin-top: 50px;
 
         }
-        .dropdown-submenu .dropdown-menu {
-            top: 0;
-            left: 100%;
-            margin-top: -1px;
-            width:auto;
-        }
-        .dropdown-item{
-            overflow-x: auto;
+        .center_div ul{
+            line-height: 40px;
         }
         
         
@@ -34,46 +35,15 @@
 <body>
 {% include "navigation_bar.html" %}
     <div class="center_div">
-        <div class="dropdown dropend d-grid gap-2 col-2 mx-auto">
-        <button class="btn btn-secondary dropdown-toggle mt-3" type="button" id="multiLevelDropdown" data-bs-toggle="dropdown" title="Select scriptname,iteration and analytics parameter" aria-expanded="false" >
-            Graph Parameters
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="multiLevelDropdown">
-            <!-- Level 1 -->
-            {% for test_case_detail in test_case_details %}
-            
-            <li class="dropdown-submenu">
-                <a class="dropdown-item" id="{{test_case_detail}}" level="1">
-                    <label>{{test_case_detail}}</label>
-                </a>
-
-                <ul class="dropdown-menu">
-                    <!-- Level 2 -->
-                    {% for iteration in test_case_details[test_case_detail] %}
-                    <li class="dropdown-submenu">
-                        <a class="dropdown-item" href="#" id="{{iteration.iteration}}" level="2">
-                            <label>{{iteration["iteration"]}}</label>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <!-- Level 3 -->
-                            {% for parameter in iteration["analytics"] %}
-                            <li class="dropdown-item ">
-                                <input type="checkbox" id={{parameter}} value='{{iteration|tojson}}' type="application/json"> {{parameter.upper()}}
-                            </li>
-                            {% endfor %}
-                            <!-- Level 3 end -->
-                        </ul>
-                    </li>
-                    {% endfor %}
-                    <!-- End Level 2 -->
-                </ul>
-            </li>
-            {%endfor%}
-        </ul>
-        <button class="btn btn-primary mt-3" onclick="printSelectedItems()">Generate Graph</button>
+        
+        <div class="tree-container">
+        </div>
+        <center>
+            <button class="btn btn-primary mt-3 btn-sm" onclick="printSelectedItems()">Generate Graph</button>
+        </center>
     </div>
-    </div>
-
+    
+    
     <div  class="main_container">
         <div id="div2" class="box2">
             
